<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Found It</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="r_initialiser_le_mot_de_passe">réinitialiser le mot de passe</string>
    <string name="ok">OK</string>
    <string name="errors_generic_title">Oups, quelque chose s\'est mal passé</string>
    <string name="title_ops">Opss !</string>
    <string name="nom_et_pr_n"> nom et prénom</string>
    <string name="adresse_e_m"> Adresse e-mail</string>
    <string name="num_ro_de_t">Numero de téléphone</string>
    <string name="mot_de_pass">Mot de passe</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="accueil">

Accueil
</string>
    <string name="contact">

Contact
</string>

    <string name="recherche_p">

Recherche par catégorie
</string>
    <string name="outils_scol">

Outils scolaires
</string>
    <string name="lectronique">

Electronique
</string>
    <string name="fins_person">

Fins personnelles
</string>
    <string name="documents">

Documents
</string>
    <string name="derniers_ob">

Derniers objets perdus
</string>
    <string name="title_activity_nav_drawer">NavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_profile">Profile</string>
    <string name="menu_aide">Aide</string>
    <string name="menu_policy">Privacy policy</string>
    <string name="menu_update">Last Update</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rechercher_">
Rechercher quelque chose qui perdus
</string>
    <string name="rechercher">

Rechercher
</string>
    <string name="examans">

Examans
</string>
    <string name="emploi">

Emploi
</string>

    <string name="conf_rences">

Conférences
</string>
    <string name="v_nements">

événements
</string>
    <string name="derniers_ac">

Derniers Actualités
</string>

    <string name="votre_nome">

Votre nome
</string>
    <string name="sujet">

Sujet
</string>
    <string name="msg">

Votre message
</string>
    <string name="envoyer">

Envoyer
</string>


    <string name="poster_quel">

Poster quelque chose qui perdus
</string>
    <string name="quelle_est_">

Quelle est la chose perdus?
</string>
    <string name="quelle_clas">

A quelle classification appartient la chose perdus?
</string>
    <string name="votre_numer">

Votre numero de téléphone
</string>
    <!-- strings.xml -->
    <string name="o_as_tu_tro">

Où as-tu trouvé la chose perdus?
</string>
    <string name="quand_as_tu">

Quand as-tu trouvé la chose perdus?
</string>
    <string name="image_de_la">

Image de la chose perdus
</string>


    <string name="importer">

Importer
</string>
    <string name="poster">

Poster
</string>
    <string name="continuer">

Continuer
</string>
    <string name="modifier_vo">

Modifier votre profile
</string>
    <string name="modifier_ad">

Modifier adresse E-mail
</string>
    <string name="modifier_nu">

Modifier numero de telephone
</string>
    <string name="modifier_le">

Modifier le mot de passe
</string>
    <string name="connex">

Connexion
</string>

<string name="ouvrire">

Ouvrir Found it
</string>
    <string name="modifier_cat">

Modifier la catégorie
</string>
    <string name="modifier_contenu">

Modifier le contenu
</string>



</resources>