<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_profile">

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.app.foundit.fragementMenu.ProfileFragment"
        android:label="@string/menu_profile"

        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_aide"
        android:name="com.app.foundit.fragementMenu.AideFragment"
        android:label="@string/menu_aide"
        tools:layout="@layout/fragment_aide" />

    <fragment
        android:id="@+id/nav_policy"
        android:name="com.app.foundit.fragementMenu.PrivacyFragment"
        android:label="@string/menu_policy"
        tools:layout="@layout/fragment_privacy" />
    <fragment
        android:id="@+id/nav_update"
        android:name="com.app.foundit.fragementMenu.UpdateFragment"
        android:label="@string/menu_update"
        tools:layout="@layout/fragment_update" />
</navigation>