<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Actualities">


    <TextView
        android:id="@+id/recherche_p"
        android:layout_width="185dp"
        android:layout_height="25dp"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="84dp"
        android:alpha="0.8"
        android:fontFamily="@font/roboto_bold"
        android:gravity="top"
        android:text="@string/recherche_p"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView

                android:id="@+id/imageView14"
                android:layout_width="82dp"
                android:layout_height="82dp"
                app:srcCompat="@drawable/conf_" />
            <TextView
                android:id="@+id/conf_rences"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="Conférence"  />
        </LinearLayout>


        <LinearLayout

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView15"
                android:layout_weight="1"
                android:layout_width="82dp"
                android:layout_height="82dp"
                app:srcCompat="@drawable/emploi_" />
            <TextView
                android:id="@+id/emploi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/emploi"  />

        </LinearLayout>

        <LinearLayout

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imageView16"
                android:layout_weight="1"
                android:layout_width="82dp"
                android:layout_height="82dp"
                app:srcCompat="@drawable/event_" />
            <TextView
                android:id="@+id/v_nements"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/v_nements" />
        </LinearLayout>

        <LinearLayout

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imageView17"
                android:layout_weight="1"
                android:layout_width="82dp"
                android:layout_height="82dp"
                app:srcCompat="@drawable/doc_" />
            <TextView
                android:id="@+id/examans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/examans"  />

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/derniers_ac"
        android:layout_width="135dp"
        android:layout_height="25dp"
        android:layout_margin="20dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="top"
        android:text="@string/derniers_ac"  />
    <ListView
        android:id="@+id/list_actualites"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>