<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/recherche_p"
                android:layout_width="185dp"
                android:layout_height="25dp"
                android:layout_marginStart="28dp"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="84dp"
                android:layout_marginBottom="25dp"
                android:alpha="0.8"
                android:fontFamily="@font/roboto_bold"
                android:gravity="top"
                android:textColor="@color/black"
                android:text="@string/recherche_p"
                android:textSize="16sp"  />
            <ImageView
                android:id="@+id/close_category"
                android:visibility="gone"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:tint="@color/green_"
                android:layout_marginStart="28dp"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="84dp"
                android:src="@drawable/close"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/container_icons"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            >

            <View
                android:id="@+id/books"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/outil"
                android:elevation="15dp" />

            <View
                android:id="@+id/laptop"
                android:layout_weight="1"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/electro_"
                android:elevation="15dp"  />

            <View
                android:id="@+id/file"
                android:layout_width="70dp"
                android:layout_weight="1"
                android:layout_height="70dp"
                android:background="@drawable/doc_"
                android:elevation="15dp"  />

            <View
                android:id="@+id/keys"
                android:layout_weight="1"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/perso_"
                android:textColor="@color/gray"
                android:elevation="15dp"  />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="5dp"
            >

            <TextView
                android:id="@+id/outils_scol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/gray"
                android:textSize="12sp"
                android:text="@string/outils_scol"  />

            <TextView
                android:id="@+id/lectronique"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/gray"

                android:textSize="12sp"
                android:text="@string/lectronique"  />
            <TextView
                android:id="@+id/documents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:textSize="12sp"
                android:textColor="@color/gray"
                android:text="@string/documents"  />
            <TextView
                android:id="@+id/fins_person"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="12sp"

                android:text="@string/fins_person"  />
        </LinearLayout>


        <TextView
            android:id="@+id/derniers_ob"
            android:layout_width="157dp"
            android:layout_height="21dp"

            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="34dp"
            android:layout_marginBottom="25dp"
            android:alpha="0.8"
            android:fontFamily="@font/roboto_bold"
            android:gravity="top"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/derniers_ob"  />

        <GridView
            android:id="@+id/grid_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:numColumns="3"
            android:horizontalSpacing="15dp"
            android:verticalSpacing="10dp"

            />

    </LinearLayout>


</RelativeLayout>